# text-replace

./: .gitignore  .travis.yml  README.md  cabal.project  default.nix  hie.yaml  stack-lts-10.yaml  stack-lts-2.yaml  stack-lts-6.yaml  stack-lts-8.yaml  stack-lts-9.yaml  stack-nightly.yaml  stack.yaml
.github/workflows/: test.hs  test.yml
configurations/: ghc-8.10.project  ghc-8.2.project  ghc-8.4.project  ghc-8.6.project  ghc-8.8.project  ghc-9.0.project  ghc-9.2.project
foo/: foo.cabal
foo/test/: docs.hs  properties.hs
nix/: HUnit-1-3-1-2.nix  ansi-terminal-0-6-3-1.nix  ansi-terminal-0-6-3.nix  concurrent-output-1-7-9.nix  default.nix  directory-1-2-6-2.nix  neat-interpolation-0-3-1-1.nix  parsec-3-1-11.nix  process-1-4-2-0.nix  process-1-4-3-0.nix  result  text-1-2-2-2.nix  text-replace.nix
stack/: stack-lts-10.yaml  stack-lts-11.yaml  stack-lts-12.yaml  stack-lts-8.yaml  stack-lts-9.yaml  stack-nightly.yaml
text-replace/: changelog.md  changelog.txt  license.txt  readme.md  text-replace.cabal
text-replace/app/: text-replace.hs
text-replace/src/Text/: Replace.hs
text-replace/test/: properties.hs
