name: foo
version: 0.0.0.1
category: ...
synopsis: ...

description: ...

homepage:    https://github.com/chris-martin/foo
bug-reports: https://github.com/chris-martin/foo/issues

author:     Chris Martin <ch.martin@gmail.com>
maintainer: Chris Martin <ch.martin@gmail.com>

license: Apache-2.0
license-file: license.txt

build-type: Simple
cabal-version: >= 1.10

source-repository head
  type: git
  location: https://github.com/chris-martin/foo

flag semigroup-in-base
  default: True
  description:
    Require a version of `base` that provides the `Data.Semigroup` and
    `Data.List.NonEmpty` modules.
    .
    Disabling this flag adds a dependency on the `semigroups` package.

flag identity-in-base
  default: True
  description:
    Require a version of `base` that provides the `Data.Functor.Identity`
    module.

flag enable-hedgehog
  default: True
  description:
    Use the `hedgehog` package for tests.
    .
    Disabling this flag disables all of the tests that use `hedgehog`.

flag enable-doctest
  default: True
  description:
    Use the `doctest` package to test the code examples in Haddock comments.

library
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends: base >=4 && <4.11
  exposed-modules: Foo

  if flag(identity-in-base)
    build-depends: base >=4.8
    cpp-options: -DIDENTITY

  if flag(semigroup-in-base)
    build-depends: base >=4.9
  else
    build-depends: semigroups >=0.8.4 && <1

test-suite docs
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: docs.hs
  hs-source-dirs: test
  ghc-options: -Wall -threaded
  build-depends: base >=4 && <4.11

  if flag(enable-doctest)
    build-depends: doctest >=0.11 && <0.14
    cpp-options: -DDOCTEST

test-suite properties
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: properties.hs
  hs-source-dirs: test
  ghc-options: -Wall -threaded
  build-depends: foo, base >=4 && <4.11

  if flag(enable-hedgehog)
    cpp-options: -DHEDGEHOG
    build-depends: hedgehog >=0.5 && <0.6

  if flag(semigroup-in-base)
    build-depends: base >=4.9
  else
    build-depends: semigroups >=0.8.4 && <1
