name: text-replace
version: 0.0.0.1
category: ...
synopsis: ...

description: ...

homepage:    https://github.com/chris-martin/text-replace
bug-reports: https://github.com/chris-martin/text-replace/issues

author:     Chris Martin <ch.martin@gmail.com>
maintainer: Chris Martin <ch.martin@gmail.com>

license: Apache-2.0
license-file: license.txt

build-type: Simple
cabal-version: >= 1.10

source-repository head
  type: git
  location: https://github.com/chris-martin/text-replace

flag enable-doctest
  default: True
  description:
    Use the `doctest` package to test the code examples in Haddock comments.

library
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends: base >=4 && <4.11
  exposed-modules: Text.Replace

executable text-replace
  default-language: Haskell2010
  hs-source-dirs: app
  main-is: text-replace.hs
  ghc-options: -Wall
  build-depends: text-replace, base >=4 && <4.11

test-suite docs
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: docs.hs
  hs-source-dirs: test
  ghc-options: -Wall -threaded
  build-depends: base >=4 && <4.11

  if flag(enable-doctest)
    build-depends: doctest >=0.11 && <0.14
    cpp-options: -DDOCTEST
