name: text-replace
version: 0.0.0.1
category: Text, Application
synopsis: ...

description: ...

homepage:    https://github.com/chris-martin/text-replace
bug-reports: https://github.com/chris-martin/text-replace/issues

author:     Chris Martin <ch.martin@gmail.com>
maintainer: Chris Martin <ch.martin@gmail.com>

license: Apache-2.0
license-file: license.txt

build-type: Simple
cabal-version: >= 1.10

source-repository head
  type: git
  location: https://github.com/chris-martin/text-replace

library
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends:
      base >=4 && <4.11
    , containers
    , megaparsec
  exposed-modules: Text.Replace

executable text-replace
  default-language: Haskell2010
  hs-source-dirs: app
  main-is: text-replace.hs
  ghc-options: -Wall
  build-depends:
      base >=4 && <4.11
    , optparse-applicative
    , text-replace

test-suite properties
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: properties.hs
  hs-source-dirs: test
  ghc-options: -Wall -threaded
  build-depends:
      base >=4.9 && <4.11
    , hedgehog >=0.5 && <0.6
    , neat-interpolation
    , text
    , text-replace
