cabal-version: 3.0

name: text-replace
version: 0.1
category: Text, Application
synopsis: Simple text replacements from a list of search/replace pairs

description:
    A library and a command-line application
    for simple string replacements in text files.

    The search for strings to replace is performed
    left-to-right, preferring longer matches
    to shorter ones.

homepage:
    https://github.com/chris-martin/text-replace
bug-reports:
    https://github.com/chris-martin/text-replace/issues

author:     Chris Martin <ch.martin@gmail.com>
maintainer: Chris Martin <ch.martin@gmail.com>

license: Apache-2.0
license-file: license.txt

build-type: Simple

extra-source-files: readme.md

source-repository head
  type: git
  location: https://github.com/chris-martin/text-replace

library
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall

  exposed-modules: Text.Replace

  build-depends: base ^>= 4.10 || ^>= 4.11 || ^>= 4.12 || ^>= 4.13 || ^>= 4.14 || ^>= 4.15
  build-depends: containers ^>= 0.5.10.2 || ^>= 0.6
  build-depends: text ^>= 1.2.2.2

executable text-replace
  default-language: Haskell2010
  hs-source-dirs: app
  main-is: text-replace.hs
  ghc-options: -Wall

  build-depends: text-replace

  build-depends: base ^>= 4.10 || ^>= 4.11 || ^>= 4.12 || ^>= 4.13 || ^>= 4.14 || ^>= 4.15
  build-depends: parsec ^>= 3.1.13
  build-depends: optparse-applicative ^>= 0.14.2 || ^>= 0.15 || ^>= 0.16
  build-depends: text ^>= 1.2.2.2

test-suite properties
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: properties.hs
  hs-source-dirs: test
  ghc-options: -Wall -threaded
  default-extensions: OverloadedStrings QuasiQuotes TemplateHaskell

  build-depends: text-replace

  build-depends: base ^>= 4.10 || ^>= 4.11 || ^>= 4.12 || ^>= 4.13 || ^>= 4.14 || ^>= 4.15
  build-depends: hedgehog ^>= 0.5.3 || ^>= 0.6 || ^>= 1.0
  build-depends: neat-interpolation ^>= 0.5
  build-depends: text ^>= 1.2.2.2
